@@ -1,8 +1,10 @@
 4.1 [Next Release]:
 - Added show detail previous bans message on join
+- Added sendDetailPrevBansOnJoin configuration (auto regenerate config.yml)
 - Added permission: exempt from kicks (mcbans.kick.exempt)
 - Auto regenerate missing locale files on /mcbans reload
 - Fixed language file warning
+- Fixed remaining time format
 - Fixed ban sync
 
 4.0:
